src/app/views/main/main.component.scss
/* ... */
.roundtwo {
    border: none;
    background: none;
    outline: none;
    text-align: center;
    font-size: 37px;
    height: 39px;
    position: absolute;
    top: 51%;
    left: 55%;
    transform: translate(-50%, -50%);
    width: 261px;
    color: #fff;
}

.roundthree_text {
    width: 70px;
    text-align: center;
    margin: 0;
    height: 107px;
    background: none;
    border: none;
    font-size: 45px;
    outline: none;
    margin-left: 1px;
    padding-top: 0px;
    padding-bottom: 8px;
    color: #fff;
}

.round_four {
    margin-left: 9%;
    margin-top: -9%;
}

.alpha_text {
    height: 60px !important;
    width: 60px !important;
    text-align: center;
    padding: 1.5%;
    font-weight: bold;
    border: 1px solid #6d8bc3 !important;
    color: #fff;
    background-size: cover !important;
    padding: 0px !important;
    border: none !important;
}

.mtm60 {
    margin-top: -60px;
}

.mrl18 {
    margin-left: 18px;
}

.grid_bg {
    background: url(../../../assets/images/BLUE/Blank.png) no-repeat;
}

.alpha_img {
    background: url('../../../assets/images/GREEN/B.png') no-repeat;
}

.mtm20 {
    margin-top: -20%;
}

.roundtwo_box {
    // background: url(../../../assets/images/round_two_box.png) no-repeat;
    width: 75%;
    height: 100px;
    /*   margin-left: -90px; */
    margin-top: -60px;
}

.roundtwohit {
    color: white;
    position: absolute;
    left: 3%;
    background: none;
    border: none;
    width: 70%;
    font-size: 33px;
    text-align: center;
    top: -7%;
    padding-top: 11px;
    height: 70px;
}

.roundtwo_alpha_body {
    margin-left: 15%;
    margin-top: 4%;
}

.timer-top {
    margin-top: 80px;
}

.timer-top-r4 {
    padding-top: 180px;
}

.alpha_wrapper_r4 {
    top: 38% !important;
}

//Round Three
.one_word_blue_three,
.one_word_green_three {
    background-size: contain;
    display: inline-block;
    min-width: 77px;
    .roundthree_text {
        width: 70px;
        text-align: center;
        margin: 0;
        height: 81px;
        background: none;
        border: none;
        font-size: 45px;
        outline: none;
        margin-left: 1px;
        padding-top: 0px;
        padding-bottom: 8px;
        color: #fff;
    }
}

.answer_four {
    margin-top: 30px;
    float: left;
    text-align: center;
    width: 100%;
    margin-left: -62px;
}

// round five
.video_body{
    margin-left: 50px;
    height: 503px;
    margin-top: -7%;
}
.videoName{
    width: 74% !important;
}

//round seven
.roundseven_box{
    height: 120px;
    width: 830px;
    z-index: -1;
    margin-left: -65px;
    display: block;
}
.roundseven_text{
    color: white;
    background: none;
    border: none;
    font-size: 38px;
    padding-top: 11px;
    height: 70px;
    margin-top: 25px;
    text-align: center;
    width: 60px;
    top: -120px;
    position: relative;
    left: -270px;

}
.green_answer_text{
    background:url(../../../assets/images/GREEN/blank.png) no-repeat;
    background-size: cover;
    margin-top: 9px;
    text-align: center;
    width: 60px;
    height: 104px;
}
.roundseven_answer{
    margin-left: -35%;
    margin-top: -110px;
}

